examples/errors/error4.orn
const x: int[2] = [1, 2]
const y: int[1] = x
